--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=², initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/css.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <title>Document</title>
   </head>
   <body>
-    <nav>
-      <ul class="menu">
+    <nav class="menu">
+      <ul class="menu__container">
         <li class="menu__item"><a href="#home" class="menu__link">Home</a></li>
         <li class="menu__item"><a href="#about" class="menu__link">About</a></li>
         <li class="menu__item"><a href="#contact" class="menu__link">Contact</a></li>
@@ -15,22 +17,21 @@
     </nav>
     <main>
       <section class="container">
-        <section class="section--home" id="home">
-          <h1 class="section--homme__title"></h1>
-          <p class="section--home__quote"></p>
+        <section class="section__home" id="home">
+          <h1 class="section__homme__title"></h1>
+          <p class="section__home__quote"></p>
         </section>
-        <section class="section--about" id="about">
+        <section class="section__about" id="about">
           <div class="about__video">
             <!-- Iframe youtube -->
           </div>
           <div class="about__content">
-            <h2 class="about__title">
-              <p class="about__text"></p>
-            </h2>
+            <h2 class="about__title"></h2>
+            <p class="about__text"></p>
           </div>
         </section>
-        <section class="section--partner" id="partner">
-            <div class="container__partner">
+        <section class="section__partner" id="partner">
+            <div class="partner__container">
               <div class="partner"><img src="" alt=""><a href=""></a></div>
               <div class="partner"><img src="" alt=""><a href=""></a></div>
               <div class="partner"><img src="" alt=""><a href=""></a></div>
