HTML/CSS adding content section about

--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
+
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=², initial-scale=1.0">
+    <mentent="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/css.css">
     <title>Vétérinaires sans frontières</title>
   </head>
   <body>
+<!-- Navigation menu  -->
     <nav class="menu">
       <img class="menu__logo" src="assets/logo.png" alt="Logo Vétérinaire sans frontières">
       <ul class="menu__container">
@@ -18,6 +22,7 @@
       </ul>
     </nav>
     <main class="container">
+<!-- Section Home  -->
         <section class="section__home" id="home">
           <div class="home__container">
             <div class="home__inner">
@@ -30,12 +35,18 @@
         </section>
 <!-- Section About  -->
         <section class="section__about" id="about">
-          <div class="about__video">
-            <!-- Iframe youtube -->
-          </div>
-          <div class="about__content">
-            <h2 class="about__title"></h2>
-            <p class="about__text"></p>
+          <div class="about__inner">
+            <div class="about__video">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/RL_Vd6R0HlE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <div class="about__content">
+              <h2 class="about__title">ACTIONS ET OBJECTIFS</h2>
+              <p class="about__text">Vétérinaires Sans Frontières lutte contre la faim et la pauvreté dans les régions reculées d’Afrique en améliorant l’élevage, entre autres à travers la création de réseaux de vétérinaires locaux, la formation des éleveurs et l’amélioration de l’accès aux marchés à bétail, à l’eau et aux pâturages.</p>
+              <ul class="about__networks">
+                <li class="about__social"><a href="https://www.facebook.com/veterinairessansfrontieres" target="_blank" rel="noopener" rel="noreferrer"  class="about__links"><i class="fab fa-facebook fa-3x"></i></a></li>
+                <li class="about__social"><a href="https://twitter.com/VSF_Belgium" target="_blank" rel="noopener" rel="noreferrer" class="about__links"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+              </ul>
+            </div>
           </div>
         </section>
 <!-- Section partner -->
