Restructuring section partner

--- a/index.html
+++ b/index.html
@@ -45,17 +45,18 @@
               <ul class="about__networks">
                 <li class="about__social"><a href="https://www.facebook.com/veterinairessansfrontieres" target="_blank" rel="noopener" rel="noreferrer"  class="about__links"><i class="fab fa-facebook fa-3x"></i></a></li>
                 <li class="about__social"><a href="https://twitter.com/VSF_Belgium" target="_blank" rel="noopener" rel="noreferrer" class="about__links"><i class="fab fa-twitter-square fa-3x"></i></a></li>
+                <li class="about__social"><a href="https://www.linkedin.com/company/v-t-rinaires-sans-fronti-res---belgium/" target="_blank" rel="noopener" rel="noreferrer" class="about__links"><i class="fab fa-linkedin fa-3x"></i></a></li>
               </ul>
             </div>
           </div>
         </section>
 <!-- Section partner -->
         <section class="section__partner" id="partner">
-            <div class="partner__container">
-              <div class="partner"><img src="" alt=""><a href=""></a></div>
-              <div class="partner"><img src="" alt=""><a href=""></a></div>
-              <div class="partner"><img src="" alt=""><a href=""></a></div>
-            </div>
+            <ul class="partner__container">
+              <li class="partner"><a href=""><img src="" alt=""></a></li>
+              <li class="partner"><a href=""><img src="" alt=""></a></li>
+              <li class="partner"><a href=""><img src="" alt=""></a></li>
+            </ul>
         </section>
     </main>
     <footer id="contact"></footer>
